--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,7 +39,8 @@ android {
 
 dependencies {
     implementation project(path: ':svg')
-    implementation project(path: ':kit')
+//    implementation project(path: ':kit')
+    implementation 'com.github.logicianstudio:android-kit:1.2.0-rc5'
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.12.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
